Refactor Playlist